--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -18,6 +18,7 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.95"
+        app:backgroundTint="@color/white"
         app:srcCompat="@android:drawable/ic_menu_always_landscape_portrait" />
 
     <WebView
